--- a/src/scss/blocks/container.scss
+++ b/src/scss/blocks/container.scss
@@ -4,7 +4,7 @@
 
 .container {
   max-width: 1200px;
-  min-width: 583px; // < 600px fix windows right scrollbar
+  min-width: 600px;
   padding: 0 40px;
   margin: 0 auto;
 }
