--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -4,7 +4,7 @@
 
 .page {
   width: 100%;
-  min-width: 583px; // < 600px fix windows right scrollbar
+  min-width: 600px;
   height: 100%;
   background-color: #fff;
 }
