--- a/src/template/sections/page-header.pug
+++ b/src/template/sections/page-header.pug
@@ -3,7 +3,8 @@ header.page-header
     .container-inner
       .col-left
         .logo
-          img.logo-img(src="pics/logo.png" alt="Binary Xperts")
-          .logo-text Binary Xperts
+          a.logo-link(href="/")
+            img.logo-img(src="pics/logo.png" alt="Binary Xperts")
+            .logo-text Binary Xperts
       .col-right
         h1.page-header-slogan Questions will be answered
