--- a/src/scss/blocks/btn.scss
+++ b/src/scss/blocks/btn.scss
@@ -13,7 +13,7 @@
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   background: rgb(255,14,0); /* Old browsers */
   background: -moz-linear-gradient(top, rgba(255,14,0,1) 0%, rgba(179,8,0,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(255,14,0,1) 0%,rgba(179,8,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
