--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -17,6 +17,6 @@
   margin: 0;
   font-weight: normal;
   font-size: rem(25);
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   color: $text-color-light;
 }
