--- a/src/scss/blocks/page-section.scss
+++ b/src/scss/blocks/page-section.scss
@@ -11,10 +11,9 @@
   margin-bottom: 15px;
   font-weight: bold;
   font-size: em(24);
-  line-height: 1.2;
   color: $accent-color;
   text-transform: uppercase;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 .page-section-darken {
