--- a/src/scss/blocks/page-wrapper.scss
+++ b/src/scss/blocks/page-wrapper.scss
@@ -5,7 +5,7 @@
 .page-wrapper {
   position: relative;
   min-height: 100%;
-  width: 100%;
+  min-width: 600px;
   overflow: hidden;
   padding-bottom: $page-footer-height;
 }
